--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,21 @@
 @import "reset.css";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
 @import "status-bar.css";
+@import "header.css";
+@import "nav-bar.css";
+
+*{
+    box-sizing: border-box;
+}
+
 body{
     background-color: white;
     padding: 10px 20px; /*top&bottom, left&right*/
     color: #020202;
-    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    height: 1000000px;
+}
+
+a{
+    color: inherit; /*링크에 보라색 없엠*/
 }
