--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 @import "reset.css";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
+@import "friend.css ";
+@import "friends.css";
+@import "find.css";
+@import "settings.css";
 
 *{
     box-sizing: border-box;
@@ -18,4 +22,5 @@ body{
 
 a{
     color: inherit; /*링크에 보라색 없엠*/
+    text-decoration: none;
 }
