--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
+    padding: 0px 10px 0px 10px;
 }
 
 .header .header__title{
