--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,6 @@
 .header-wrapper{
     position: fixed;
+    z-index: 2;
     top: 0px;
     width: 100%;
     padding: 5px 0px;
@@ -25,31 +26,46 @@
 .chat__write--container {
     position: fixed;
     bottom: 0px;
-    margin: 0 auto;
     left:0;
     right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fcfcfc;
-    padding: 0px 20px;
+    width: 100%;
     /*
     box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
 */
 }
 
+@keyframes float{
+    0%{
+        box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+    }
+    50%{
+        box-shadow: 0 30px 60px -60px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+    }
+    100%{
+        box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+    }
+}
+
 .chat__write{
+    margin: 0 auto;
     bottom: 0px;
     width: 100%;
     border-radius: 0;
     padding: 20px 60px;
+    width: 100%;
     border: none;
     font-size: 14px;
+    transition: width 0.5s ease-in-out, border-radius 0.5s ease-in-out,
+        transform 0.5s ease-in-out;
 
 }
 
 .chat__icon-left{
     position: absolute;
+    left : 10px;
 }
 
 .chat__icon-right{
@@ -59,6 +75,12 @@
 
 .chat__write:focus{
     outline: none;
+    width: 80%;
+    margin: 0 auto;
+    transform: translateY(-100px);
+    border-radius: 40px;
+    box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+    animation: float 3s linear infinite forwards;
 }
 
 .chat__icon{
@@ -124,10 +146,23 @@
     align-self: flex-end;
 }
 
+@keyframes spin{
+    from{
+        transform: none;
+    }
+    to{
+        transform: rotatey(1turn);
+    }
+}
+
 .incoming-message img {
     width: 30px;
     border-radius:15px;
     margin-right: 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
+    animation: spin 1s linear infinite;
 }
 
 
@@ -158,4 +193,34 @@
 .sent-message .message__bubble{
     border-bottom-right-radius: 0px;
     background-image: linear-gradient(to right ,#f2709c, #ff9472);
+}
+
+@keyframes incomingAnim {
+    from{
+        opacity: 0;
+        transform:translateX(-200px);
+    }
+    to{
+        opacity: 1;
+        transfrom:none;
+    }
+}
+
+.incoming-message{
+    animation: incomingAnim 0.5s ease-out forwards;
+}
+
+@keyframes sentAnim{
+    from{
+        opacity: 0;
+        transform:translateX(+200px);
+    }
+    to{
+        opacity: 1;
+        transfrom:none;
+    }
+}
+
+.sent-message{
+    animation: sentAnim 0.5s ease-out forwards;
 }
