--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 @import "settings.css";
 @import "chat.css";
 @import "more.css";
-
+@import "mobile.css";
 
 *{
     box-sizing: border-box;
@@ -25,4 +25,19 @@ body{
 a{
     color: inherit; /*링크에 보라색 없엠*/
     text-decoration: none;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+main {
+    animation: fadeIn 0.5s ease-in-out;
 }
